# sz-python-tools

./: .flake8  .gitignore  .mypy.ini  .project  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  data.json  development-requirements.txt  pyproject.toml  requirements.txt  settings.json  setup.cfg  sz_audit  sz_explorer  sz_snapshot
.claude/: CLAUDE.md
.github/linters/: .jscpd.json  bearer.yml
.github/workflows/: README.md  add-to-project-g2-python-dependabot.yaml  add-to-project-g2-python.yaml  add-to-project-garage.yaml  bandit.yaml  bearer.yaml  black.yaml  check-development-dependencies.yaml  dependency-scan.yaml  flake8.yaml  isort.yaml  move-pr-to-done-g2-python-dependabot.yaml  mypy.yaml  pylint.yaml  pytest-darwin.yaml  pytest-linux.yaml  pytest-windows.yaml
.vscode_borked/: settings.json
data/sg_test_v4/: sg_audit_v39-v40.csv  sg_audit_v39-v40.json  sg_snapshot_v39.csv  v4_test_sg.sh
data/truth/: customers.csv  reference.csv  truthset-load1-key.csv  truthset-load2-key.csv  truthset-load3-key.csv  watchlist.csv
docs/: README.md  best-practices.md  development.md  errors.md  examples.md
g2_tools/: G2Audit.py  G2Command.py  G2ConfigTool.py  G2CreateProject.py  G2Explorer.py  G2Loader.py  G2Project.py  G2Snapshot.py  G2UpdateProject.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_sz-python-tools_py.html
makefiles/: darwin.mk  linux.mk  windows.mk
src/: sz-python-tools.py
sz_tools/: _project_helpers.py  _sz_database.py  _tool_helpers.py  file-loader_v4.py  file-loader_v4.py_B4AddingShuffle  file-loader_v4.py_B4LoggerChange  file-loader_v4.py_B4MainMod  file-loader_v4.py_B4ShuffCleanup  file-loader_v4.py_B4ShuffCleanup2  mixin.py  snap1.json  sz_audit  sz_command  sz_command.py  sz_command.py_B  sz_command.py_B4ChangingColorFormat  sz_command.py_B4Cleanup1  sz_command.py_B4Cleanup2  sz_command.py_B4DecFlagsChange  sz_command.py_B4OrjsonRefactor  sz_command.py_B4Pyclip  sz_command.py_MixinExample  sz_command.py_PlayedWithSelfDecorator  sz_command.py_PlayingWithSelfDecorator  sz_configtool  sz_configtool.py  sz_create_project  sz_create_project_prior1  sz_database.py  sz_default_config.json  sz_explorer  sz_explorer.py  sz_export  sz_file_loader  sz_file_loader_prior1  sz_json_analyzer  sz_setup_config  sz_setup_config.py  sz_snapshot  sz_update_project  (+9 more)
sz_tools/etc/: G2Module.ini
sz_tools/sg_test_v4/: Singapore_File_1.json  Singapore_File_3.json  sg_config.g2c  sg_snapshot_v39.json  v4_test_sg.sh
tests/: example_test.py
