[project]
name = "sz-python-tools"
version = "0.0.33"
description = "Senzing Python Tools"
authors = [{ name = "senzing", email = "support@senzing.com" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["senzing >= 4.0.2", "senzing-core >= 1.0.0"]
license = "Apache-2.0"
license-files = [
  "LICENSE",
  ".github/senzing-corporate-contributor-license-agreement.pdf",
  ".github/senzing-individual-contributor-license-agreement.pdf",
]

[project.urls]
bugtracker = "https://github.com/senzing-garage/sz-python-tools/issues"
changelog = "https://github.com/senzing-garage/sz-python-tools/blob/main/CHANGELOG.md"
source = "https://github.com/senzing-garage/sz-python-tools"


[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
all = [
  { include-group = "development" },
  { include-group = "documentation" },
  { include-group = "lint" },
  { include-group = "test" },
]
development = [
  "build==1.3.0",
  "coverage==7.10.7; python_version <= '3.11'",
  "coverage==7.13.1; python_version > '3.11'",
  "cryptography==46.0.3",
  "psutil==7.2.1",
  "pytest-cov==7.0.0",
  "pytest-schema==0.1.2",
  "pytest==8.4.2; python_version <= '3.11'",
  "pytest==9.0.2; python_version > '3.11'",
  "twine==6.2.0",
  "typing_extensions==4.15.0; python_version < '3.11'",
  "virtualenv==20.36.0",
  "wheel==0.45.1",
]
documentation = [
  "autodocsumm",
  "myst_parser",
  "sphinx-autodoc-typehints",
  "sphinx-gallery",
  "sphinx-jinja2-compat",
  "sphinx-prompt",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinx",
  "sphinxcontrib-applehelp",
  "sphinxcontrib-devhelp",
  "sphinxcontrib-htmlhelp",
  "sphinxcontrib-jquery",
  "sphinxcontrib-jsmath",
  "sphinxcontrib-qthelp",
  "sphinxcontrib-serializinghtml",
  "sphinxext-remoteliteralinclude",
]
lint = [
  "bandit==1.8.6; python_version <= '3.11'",
  "bandit==1.9.2; python_version > '3.11'",
  "black==25.11.0; python_version <= '3.11'",
  "black==25.12.0; python_version > '3.11'",
  "flake8==7.3.0",
  "isort==6.1.0; python_version <= '3.11'",
  "isort==7.0.0; python_version > '3.11'",
  "mypy==1.19.1",
  "pylint-per-file-ignores==2.0.3; python_version <= '3.11'",
  "pylint-per-file-ignores==3.2.0; python_version > '3.11'",
  "pylint==3.3.9; python_version <= '3.11'",
  "pylint==4.0.4; python_version > '3.11'",
]
test = [
  "pytest==8.4.2; python_version <= '3.11'",
  "pytest==9.0.2; python_version > '3.11'",
  "coverage==7.10.7; python_version <= '3.11'",
  "coverage==7.13.1; python_version > '3.11'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
skips = ["B101", "B108", "B404", "B602", "B605", "B608"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
src_paths = ["examples", "src", "tests"]

[tool.mypy]
exclude = ['.venv', 'g2_tools']
disable_error_code = [
  "arg-type",
  "attr-defined",
  "import-not-found",
  "name-defined",
  "no-untyped-call",
  "no-untyped-def",
  "return-value",
  "union-attr",
  "unused-ignore",
  "var-annotated",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "senzing_abstract.szengineflags.*"
ignore_missing_imports = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "pytest_schema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sz_tools/_sz_database"
ignore_missing_imports = true

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [
  "broad-except",
  "broad-exception-raised",
  "consider-iterating-dictionary",
  "consider-using-dict-items",
  "consider-using-f-string",
  "consider-using-generator",
  "f-string-without-interpolation",
  "invalid-name",
  "line-too-long",
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-member",
  "protected-access",
  "raise-missing-from",
  "simplifiable-if-expression",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-statements",
  "undefined-variable",
  "unidiomatic-typecheck",
  "unspecified-encoding",
  "unused-argument",
  "unused-import",
  "unused-variable",
  "useless-return",
]

good-names = ["sz-python-tools"]
ignore = ["__init__.py", "docs/source/conf.py"]
notes = ["FIXME"]

[tool.setuptools]
package-dir = { "" = "sz_tools" }
