[metadata]
name = python-tools
version = 0.0.1
author = senzing
author_email = support@senzing.com
description = Python Tools
license = Apache 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senzing-garage/sz-python-tools
project_urls =
    Bug Tracker = https://github.com/senzing-garage/sz-python-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    senzing-abstract >= 0.1.10

[options.packages.find]
where = src
