[metadata]
name = sz-python-tools
version = 0.0.31
author = senzing
author_email = support@senzing.com
description = Senzing Python Tools
license = Apache 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senzing-garage/sz-python-tools
project_urls =
    Bug Tracker = https://github.com/senzing-garage/sz-python-tools/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = sz_tools
packages = find:
python_requires = >=3.9
install_requires =
    senzing >= 4.0.2
    senzing-core >= 1.0.0

[options.packages.find]
where = src
